feat: MultiAnalyzer